--- a/AgendaTarefas/appsettings.json
+++ b/AgendaTarefas/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "ConexaoBD": "Data Source=AgendaTarefas.db;"
+    "ConexaoBD": "Data Source=Agenda.db;"
   }
 }
